--- a/sass/modules/_spacing.scss
+++ b/sass/modules/_spacing.scss
@@ -60,6 +60,7 @@
 //=================
 .container__list {
     padding: 0.6rem;
+    margin: auto;
 
     li {
         margin: 0.6rem;
